# OxideSerpentineString

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
.cargo/: config
python/oxide_serpentine_string/: test.py
python/oxide_serpentine_string/test/data/authentication/Google_API_Key/: Google_API_Key.yaml
python/oxide_serpentine_string/test/data/authentication/Google_GCP_Service_account/: Google_GCP_Service_account.txt  Google_GCP_Service_account.yaml
python/oxide_serpentine_string/test/data/authentication/Google_OAuth_Access_Token/: Google_OAuth_Access_Token.txt  Google_OAuth_Access_Token.xml
python/oxide_serpentine_string/test/language/json/: test.json
src/: JavaScript.pest  lib.rs
src/language/: mod.rs
src/language/csv/: grammar.pest  mod.rs
src/language/javascript/: grammar.pest  mod.rs
src/language/json/: grammar.pest  mod.rs
src/language/python/: grammar.pest  mod.rs
src/language/toml/: grammar.pest  mod.rs
src/patterns/: mod.rs
test/: test.js  test.py  test.sh
test/data/authentication/Google_API_Key/: Google_API_Key.json  Google_API_Key.txt  Google_API_Key.xml
test/data/authentication/Google_GCP_Service_account/: Google_GCP_Service_account.json  Google_GCP_Service_account.xml
test/data/authentication/Google_OAuth_Access_Token/: Google_OAuth_Access_Token.json  Google_OAuth_Access_Token.yaml
test/data/crypto/PEM_DSA_1024/: PEM_DSA_1024.txt  PEM_DSA_1024.xml
test/data/crypto/PEM_DSA_2048/: PEM_DSA_2048.txt  PEM_DSA_2048.xml  PEM_DSA_2048.yaml
test/data/crypto/PEM_DSA_4096/: PEM_DSA_4096.json  PEM_DSA_4096.txt  PEM_DSA_4096.xml
test/data/crypto/PEM_EC_256/: PEM_EC_256.json
test/data/crypto/PEM_EC_384/: PEM_EC_384.txt  PEM_EC_384.xml  PEM_EC_384.yaml
test/data/crypto/PEM_EC_521/: PEM_EC_521.json  PEM_EC_521.yaml
test/data/crypto/PEM_PGP/: PEM_PGP.json  PEM_PGP.txt  PEM_PGP.xml
test/data/crypto/PEM_RSA_1024/: PEM_RSA_1024.xml
test/data/crypto/PEM_RSA_2048/: PEM_RSA_2048.txt
test/data/crypto/PEM_RSA_3072/: PEM_RSA_3072.json  PEM_RSA_3072.txt  PEM_RSA_3072.xml  PEM_RSA_3072.yaml
test/data/crypto/PEM_RSA_4096/: PEM_RSA_4096.json  PEM_RSA_4096.txt  PEM_RSA_4096.yaml
test/data/crypto/PEM_RSA_512/: PEM_RSA_512.json  PEM_RSA_512.xml  PEM_RSA_512.yaml
test/language/csv/: expect.json
test/language/javascript/: test.js
test/language/json/: test.json
test/language/python/: test.py
test/language/toml/: test.toml
test/patterns/javascript/: test.js
(+19 files in other folders)
