[package]
name = "oxide_serpentine_string"
version = "0.1.0"
edition = "2021"

[lib]
name = "oxide_serpentine_string"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
pest = { version = "2.7.5", default-features = true }
pest_derive = { version = "2.7.5", default-features = true }
regex = { version = "1.3", default-features = true, features = ["std"] }
once_cell = { version = "1.18.0", features = [] }
strum = "0.25"
strum_macros = { version = "0.25", features = [] }
line-numbers = "0.2.2"
syntect = "5.1.0"
